# Laminaria

./: .gitignore  Cargo.toml  Laminaria.code-workspace  Laminaria.md  README.md  SeaWeed.md  journal.md
src/: audio.rs  buffer.rs  chorus.rs  envelope.rs  filter.rs  harmonic_model.rs  main.rs  midi.rs  midibuffer.rs  oscillator.rs  outils.rs  parameters.rs  reverb.rs  sine_model.rs  synth.rs  textparsing.rs  ui.rs
