[package]
name = "Laminaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1"
cpal = "0"
anyhow = "1"
midir = "0.10.0"
crossterm = "0.27.0"
rustfft = "6.2.0"
clap = { version = "4.5.9", features = ["derive"] }
